lorm 0.1.13 2016-8-18

[FIX]   Struct arguments


lorm 0.1.12 2016-8-18

[NEW]   add QuerySet.exists method
[NEW]   add QuerySet.__bool__ method
[NEW]   add QuerySet.__nonzero__ method

[FIX]   fix escape encode issue